fixed values algorithm. investigating screen top issue on ios devices

--- a/src/styles/sass/header2.scss
+++ b/src/styles/sass/header2.scss
@@ -15,7 +15,7 @@
       #header-items2{
         @include box(flex, row, space-between, center);
         width:$width-mobile;
-        margin: 11px  auto 0 auto; 
+        margin: 11px auto; 
 
         #logo2{
           width:37.49px;
